--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   google_fonts: ^5.1.0 
   image_picker: ^1.0.1
+  intl: ^0.18.1
   page_transition: ^2.0.9
   provider: ^6.0.5
   quickalert: ^1.0.1
