--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
+  getwidget: ^3.1.1
   google_fonts: ^5.1.0 
   image_picker: ^1.0.1
   intl: ^0.18.1
