--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,20 +29,28 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  flip_card: ^0.7.0
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
   getwidget: ^3.1.1
-  google_fonts: ^5.1.0 
+  google_fonts: ^4.0.4
+  hmssdk_flutter: ^1.7.3
+  http: ^0.13.4
   image_picker: ^1.0.1
-  intl: ^0.18.1
+  intl: ^0.18.0
   page_transition: ^2.0.9
+  patterns_canvas: ^0.4.0
+  permission_handler: ^10.4.3
   provider: ^6.0.5
   quickalert: ^1.0.1
   shared_preferences: ^2.2.0
   top_snackbar_flutter: ^2.1.1
+  zego_uikit: ^2.8.3
+  zego_uikit_prebuilt_live_streaming: ^2.15.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
