--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,15 @@ dependencies:
   permission_handler: ^10.4.3
   provider: ^6.0.5
   quickalert: ^1.0.1
+  settings_ui: ^2.0.2
   shared_preferences: ^2.2.0
   top_snackbar_flutter: ^2.1.1
-  zego_uikit: ^2.8.3
-  zego_uikit_prebuilt_live_streaming: ^2.15.1
+  agora_uikit: ^1.3.6
+  file_picker: ^5.3.3
+  agora_rtc_engine: ^6.2.2
+  agora_rtm: ^1.5.8	
+
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
