--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.aahstar">
+    package="com.ait.aahstar">
     <uses-feature android:name="android.hardware.camera"/>
 
 <uses-feature android:name="android.hardware.camera.autofocus"/>
@@ -14,9 +14,9 @@
 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
    <application
-        android:label="aahstar"
+        android:label="Aahstar"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@drawable/logo">
         <activity
             android:name=".MainActivity"
             android:exported="true"
