--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
    <application
         android:label="Aahstar"
         android:name="${applicationName}"
-        android:icon="@drawable/logo">
+        android:icon="@drawable/logo"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
