--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,13 +52,12 @@ dependencies:
   top_snackbar_flutter: ^2.1.1
   agora_uikit: ^1.3.6
   file_picker: ^5.3.3
-  agora_rtc_engine: ^6.2.2
-  agora_rtm: ^1.5.8	
   url_launcher: ^6.1.12
   video_player: ^2.7.0
   chewie: ^1.7.0
   camera: ^0.10.5+4
   sensors_plus: ^1.0.5
+  webview_flutter: ^4.2.4
 
 
 
