--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,7 +14,11 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
+       jcenter()
+        maven {
+            url 'https://google.bintray.com/exoplayer/'
+        }
+
     }
 }
 
