--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
   chewie: ^1.7.0
   camera: ^0.10.5+4
   sensors_plus: ^1.0.5
-  webview_flutter: ^4.2.4
+  flutter_inappwebview: ^5.7.2+3
+  flutter_camera: ^1.0.0
 
 
 
